0.12

0.11 2013-11-15
 - Fix test dependencies (IO::CaptureOutput).

0.10 2013-11-14
 - Update prereq Error::Pure to 0.15 version.

0.09 2013-11-13
 - Add 'readme_from' directive to Makefile.PL.
 - Add minimal Perl version.
 - Rename pod_example to pod-example.
 - Rewrite running of example from eval() to system() on temporary file.

0.08 2013-11-06
 - Fix dependency for Test::Output. Test::Output qw(1.01) is bad.
 - Move back problematic test.

0.07 2013-09-29
 - Add LICENSE.
 - Add SIGNATURE file.
 - Rewrite Changes file to CPAN::Changes::SPEC format.

0.06 2013-05-06
 - Add version to pod_example script.
 - Comment problematic test.
 - Improve man page.

0.05 2013-04-28
 - Add Test::NoWarnings to tests.
 - Add Test::Warn for one test.
 - Fix help (add -e option to possible arguments).
 - Improve help to 80 chars per line.

0.04 2012-11-12
 - Fix rigth word to right.
 - Improve cover testing.

0.03 2012-08-24
 - Fix length of #-----... to 80 chars.
 - Add enumerating of lines.

0.02 2012-07-16
 - Add doc for pod_example script.
 - Fix git repository.
 - Fix help indent in pod_example script.
 - Remove "(3pm)" from pod doc.
 - Rewrite 03-pod.t to better version for Perl 5.6.
 - Rewrite to new version of build system.
 - Add examples/ directory.
 - Fix Makefile.PL to META 1.4.

0.01 2011-07-15
 - First version.