@@ -1,4 +1,5 @@
 0.12
+ - Update Module::Install to 1.08 version.
 
 0.11 2013-11-15
  - Fix test dependencies (IO::CaptureOutput).
